--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^9.17.1",
     "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
     "vuefire": "^3.0.1"
   },
   "devDependencies": {
